iot/homeassistant/service-wemo.yaml
kind: Service
apiVersion: v1
metadata:
  name: hass-wemo
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.4.200
  externalTrafficPolicy: Local
  ports:
    - name: wemo-upnp
      port: 8989
      protocol: TCP
      targetPort: 8989
  selector:
    name: hass
