iot/homeassistant/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hass
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8123
  selector:
    name: hass
