iot/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-nginx-lan-hass
spec:
  ingressClassName: nginx-lan
  rules:
  - host: hass.local
    http:
      paths:
      - backend:
          service:
            name: hass
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hass.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    sclem.dev/external-dns: "true"
  name: tls-nginx-wg-hass
spec:
  ingressClassName: nginx-wg
  rules:
  - host: hass.local
    http:
      paths:
      - backend:
          service:
            name: hass
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hass.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    sclem.dev/external-dns: "true"
  name: tls-nginx-cloud-oracle-hass
spec:
  ingressClassName: nginx-cloud-oracle
  rules:
  - host: hass.internet
    http:
      paths:
      - backend:
          service:
            name: hass
            port:
              name: http
        path: /auth/authorize
        pathType: Prefix
      - backend:
          service:
            name: hass
            port:
              name: http
        path: /auth/token
        pathType: Prefix
      - backend:
          service:
            name: hass
            port:
              name: http
        path: /api/google_assistant
        pathType: Prefix
  tls:
  - hosts:
    - hass.internet
    secretName: letsencrypt-hass-cloud
